testsuite/tests/typing-objects/pr6383.compilers.reference
Characters 36-41:
  let f (x: #M.foo) = 0;;
             ^^^^^
Error: Unbound module M

